--- a/styles/_container.scss
+++ b/styles/_container.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 62px;
-    width: 85vw;
+    width: 1160px;
     box-sizing: border-box;
 
     .containerInner {
@@ -18,3 +18,7 @@
         margin-left: 12px
     }
 }
+
+// color {
+//     color: #003418
+// }
