--- a/styles/app.module.css
+++ b/styles/app.module.css
@@ -60,7 +60,7 @@
       -ms-flex-align: center;
           align-items: center;
   height: 62px;
-  width: 85vw;
+  width: 1160px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
