--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -1,6 +1,6 @@
 .mainGrid {
     display: grid ;
-    grid-template-columns: 25% 1fr 25%;
+    grid-template-columns: 25% 1fr 250px;
     width: 100%;
 }
 
